Manually call lstat() and pass the stat struct to libarchive.

archive_read_disk_entry_from_file() calls lstat() itself if it has
been compiled with HAVE_LSTAT and it is set not to follow
symlinks. These conditions do not always hold, so it is better to call
lstat() ourselves to make sure symlinks are not followed.

BUG: 253059

svn path=/trunk/KDE/kdeutils/ark/; revision=1186375